working condition check

--- a/readme
+++ b/readme
@@ -7,3 +7,11 @@ FireBase integration (go through this documentation) : https://docs.expo.dev/gui
 - then you can use the initialize and other calls to connect/auth details from the fire base
 
 Spring security : https://www.youtube.com/watch?v=_GSHvvken2k (detailed explanation)
+
+![alt text](image.png)
+
+^^^^^ reeact hooks map (source : https://www.youtube.com/watch?v=LOH1l-MP_9k )
+
+
+
+![alt text](image-1.png)   -- Full stack paths and prefered websites
